src/objects/Order_Custom_Field__c.object
<CustomObject>
    <label>Order Custom Field</label>
    <nameField>
        <label>Order Custom Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Custom Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>eid__c</fullName>
        <label>Gotransverse Eid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityIdCheck__c</fullName>
        <label>Gotransverse OpportunityIdCheck</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <externalId>true</externalId>
        <label>Gotransverse OpportunityID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Gotransverse Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>